<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="5dip"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
        >
	        <EditText
	            android:id="@+id/tvSmsContent"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="Sms Content"
	            android:inputType="textAutoComplete|textCapSentences"
	        />
	        <EditText
	            android:id="@+id/tvSmsPhone"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="Phone"
	            android:text="0683469658"
	            android:inputType="number"
	        />
	        <TextView
	            android:id="@+id/tvMessage"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	        />
        </LinearLayout>
    </ScrollView>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#c6c3c6"
	        android:minHeight="54dip"
	        android:paddingTop="4dip"
	        android:paddingLeft="2dip"
	        android:paddingRight="2dip"
	        android:orientation="horizontal">
		    <Button
		        android:id="@+id/btn_send_db"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_send_db"
	            android:onClick="onClickSendDb"
		     />

		    <Button
		        android:id="@+id/btn_clean_db_sms"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_clean_db_sms"
	            android:onClick="onClickCleanDbSms"
		     />

		    <Button
		        android:id="@+id/btn_clean_db_contact"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_clean_db_contact"
	            android:onClick="onClickCleanDbContact"
		     />
		    
		    <Button
		        android:id="@+id/btn_text_set_service_export_time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_time"
	            android:onClick="onClickSetServiceExportTime"
		     />

		    <Button
		        android:id="@+id/btn_text_set_service_export_sms_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_sms_count"
	            android:onClick="onClickSetServiceExportSmsCount"
		     />
	
		    <Button
		        android:id="@+id/btn_text_set_service_export_contact_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_contact_count"
	            android:onClick="onClickSetServiceExportContactCount"
		     />

		    <Button
		        android:id="@+id/btn_text_set_service_export_sms_all"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_sms_all"
	            android:onClick="onClickSetServiceExportSmsAll"
		     />

		    <Button
		        android:id="@+id/btn_text_set_service_export_contact_all"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_contact_all"
	            android:onClick="onClickSetServiceExportContactAll"
		     />

		    <Button
		        android:id="@+id/btn_text_run_service_export"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_run_service_export"
	            android:onClick="onClickRunServiceExport"
		     />

		    <Button
		        android:id="@+id/btn_text_clean_run_service_export_sms_all"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_clean_run_service_export_sms_all"
	            android:onClick="onClickCleanRunServiceExportSmsAll"
		     />

		    <Button
		        android:id="@+id/btn_text_clean_run_service_export_contact_all"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_clean_run_service_export_contact_all"
	            android:onClick="onClickCleanRunServiceExportContactAll"
		     />

		    <Button
		        android:id="@+id/btn_text_clean_run_service_export_all"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_clean_run_service_export_all"
	            android:onClick="onClickCleanRunServiceExportAll"
		     />
		</LinearLayout>
	</HorizontalScrollView>
</LinearLayout>