<?xml version="1.0" encoding="utf-8" ?>
<!--
http://developer.android.com/resources/samples/SampleSyncAdapter/res/layout/login_activity.html
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="5dip"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
        >
	        <EditText
	            android:id="@+id/tvSmsContent"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="Sms Content"
	            android:inputType="textAutoComplete|textCapSentences"
	        />
	        <EditText
	            android:id="@+id/tvSmsPhone"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="Phone"
	            android:inputType="number"
	        />
	        <TextView
	            android:id="@+id/tvMessage"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	        />
	        <TextView
                android:id="@+id/message"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:visibility="gone"
            />
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_username_label"
                android:visibility="gone"
            />
            <EditText
                android:id="@+id/username_edit"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false"
                android:inputType="textEmailAddress"
                android:visibility="gone"
            />
            <TextView
                android:id="@+id/username_fixed"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                android:layout_marginTop="2dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
            />
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_marginTop="2dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_password_label"
                android:visibility="gone"
            />
            <EditText
                android:id="@+id/password_edit"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false"
                android:password="true"
                android:inputType="textPassword"
                android:visibility="gone"
            />
            <TextView
                android:id="@+id/message_bottom"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:visibility="gone"
            />
        </LinearLayout>
    </ScrollView>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#c6c3c6"
	        android:minHeight="54dip"
	        android:paddingTop="4dip"
	        android:paddingLeft="2dip"
	        android:paddingRight="2dip"
	        android:orientation="horizontal">
	        <Button
	            android:id="@+id/btn_ok"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/login_activity_login_button"
	            android:onClick="onClickLogin" />
	
		    <Button
		        android:id="@+id/btn_send_sms"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_send_sms"
	            android:onClick="onClickSend"
	            android:visibility="gone"
		     />

		    <Button
		        android:id="@+id/btn_send_db"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_server_call_send_db"
	            android:onClick="onClickSendDb"
		     />

		    <Button
		        android:id="@+id/btn_start_download"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_server_download_db"
	            android:onClick="onClickDownloadDb"
		     />
		    
		    <Button
		        android:id="@+id/btn_clean_db_sms"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_clean_db_sms"
	            android:onClick="onClickCleanDbSms"
		     />

		    <Button
		        android:id="@+id/btn_clean_db_contact"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_clean_db_contact"
	            android:onClick="onClickCleanDbContact"
		     />
		    
		    <Button
		        android:id="@+id/btn_text_set_service_export_time"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_time"
	            android:onClick="onClickSetServiceExportTime"
		     />
	
		    <Button
		        android:id="@+id/btn_text_set_service_export_sms_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_sms_count"
	            android:onClick="onClickSetServiceExportSmsCount"
		     />
	
		    <Button
		        android:id="@+id/btn_text_set_service_export_contact_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_set_service_export_contact_count"
	            android:onClick="onClickSetServiceExportContactCount"
		     />
		    
		    <Button
		        android:id="@+id/btn_text_run_service_export"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_run_service_export"
	            android:onClick="onClickRunServiceExport"
		     />

		    <Button
		        android:id="@+id/btn_text_gss_client"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_gss_client"
	            android:onClick="onClickGssClient"
		     />

		    <Button
		        android:id="@+id/btn_text_sms_language"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
		        android:text="@string/btn_text_sms_language"
	            android:onClick="onClickSmsLanguage"
		     />

		    <Button
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_text_send_apk"
	            android:id="@+id/btnSendAPK"
		    />

		    <Button
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_text_send_apk_client"
	            android:id="@+id/btnSendAPKP2PClient"
		    />

		    <Button
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/btn_text_send_apk_ihm"
	            android:id="@+id/btnSendAPKIhm"
		    />
		</LinearLayout>
	</HorizontalScrollView>
</LinearLayout>